Initial frontend commit with landing page, authentication, user roles, and favicon

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://ai-photo-backend-production.up.railway.app
+VITE_API_URL=http://localhost:3001
+#  VITE_API_URL=https://ai-photo-backend-production.up.railway.app
